...

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/letter_info_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- This is the container we will animate -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <in.digistorm.aksharam.activities.main.util.AutoAdjustingTextView
                android:id="@+id/heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="8dp"
                android:text="@string/test_text"
                android:textSize="@dimen/letter_info_heading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/transliterated_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:includeFontPadding="true"
                android:padding="8dp"
                android:text="@string/test_text"
...
