...
            android:layout_marginEnd="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/delete_language"
            android:layout_width="32dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:contentDescription="@string/delete_button"
            android:focusable="true"
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_delete_24" />

        <ImageView
            android:id="@+id/download_language"
            android:layout_width="32dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:contentDescription="@string/download_button"
            android:focusable="true"
...
