...
    <string name="transliteration_input_hint">Text to transliterate</string>
    <string name="transliterate_tab_info_default">Enter text to transliterate</string>
    <string name="could_not_detect_language">
        Could not detect language.
    </string>
    <string name="transliteration">Transliteration</string>
    <string name="letters_tab_header">Letters</string>
    <string name="transliterate_tab_header">Transliterate</string>
    <string name="practice_tab_header">Practice</string>

    <string name="letters_tab_language_hint">Language</string>
    <string name="letters_tab_trans_hint">Convert To</string>
    <string name="transliterate_tab_trans_hint">Convert To</string>
...
    </string>

    <!-- Action bar Menu Items !-->
    <string name="help">Help</string>
    <string name="privacy">Privacy</string>
    <string name="dark_light_mode">Dark/Light Mode</string>
    <string name="settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="language_info">Language Info</string>

    <!-- Network Errors -->
    <string name="could_not_connect">
...
